--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "airbnb",
+    "airbnb-typescript",
     "next/core-web-vitals"
   ],
   "parser": "@typescript-eslint/parser",
@@ -13,7 +14,6 @@
     }
   ],
   "rules":  {
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "react/jsx-props-no-spreading": "off"
   }
 }
