--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "13.1.1",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
