--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@next/font": "13.1.1",
+    "@next/mdx": "^13.1.6",
     "@shopify/shopify-api": "^6.2.0",
     "@svgr/webpack": "^6.5.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -40,6 +44,7 @@
     "react-dom": "18.2.0",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "webpack": "^5.75.0"
   }
 }
