--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   "parser": "@typescript-eslint/parser",
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx"],
+      "files": ["*.ts", "*.tsx", "*.mdx"],
       "parserOptions": {
         "project": ["./tsconfig.json"]
       }
