--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/font": "13.1.1",
+    "@next/mdx": "^13.1.6",
     "@shopify/shopify-api": "^6.2.0",
     "@svgr/webpack": "^6.5.1",
     "@tailwindcss/typography": "^0.5.9",
@@ -37,11 +38,12 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "13.1.1",
-    "next-mdx-remote": "^4.3.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-obfuscate": "^3.6.8",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4",
