--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
+    "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.21",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
