Add explainations to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SHOPIFY_API_KEY=
-SHOPIFY_ADMIN_API_KEY=
-SHOPIFY_HOSTNAME=
-REVALIDATE_SECRET=
+SHOPIFY_API_KEY=getfromshopify
+SHOPIFY_ADMIN_API_KEY=getfromshopify
+SHOPIFY_HOSTNAME=yourshop.myshopify.com
+REVALIDATE_SECRET=thisisrandomstringthatyoumakeup
