--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "next": "13.5.6",
+    "next": "^13.5.8",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.3",
     "postcss": "^8.4.31",
@@ -44,7 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-obfuscate": "^3.6.8",
-    "sharp": "^0.31.3",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.3.3",
     "typescript": "4.9.5",
     "webpack": "^5.80.0"
