--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 SHOPIFY_API_KEY=getfromshopify
+SHOPIFY_API_SECRET_KEY=getfromshopify
 SHOPIFY_ADMIN_API_KEY=getfromshopify
-SHOPIFY_HOSTNAME=yourshop.myshopify.com
-REVALIDATE_SECRET=thisisrandomstringthatyoumakeup
+SHOPIFY_HOSTNAME="yourstorename.myshopify.com"
+SHOPIFY_STORE="specialdefaultstorename"
+
+REVALIDATE_SECRET="thisisrandomstringthatyoumakeup"
+
+EUROS_CODE="codeforeurosorothermerch"
+KIDS_LINK="link"
+ADULTS_LINK="link"
