--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.1.6",
-    "@shopify/shopify-api": "^7.7.0",
+    "@shopify/shopify-api": "^11.13.0",
     "@svgr/webpack": "^6.5.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.15.11",
@@ -25,7 +25,7 @@
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vercel/analytics": "^0.1.10",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.13",
     "daisyui": "2.52.0",
     "eslint": "8.51.0",
@@ -36,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "graphql": "^16.11.0",
     "next": "^13.5.8",
     "next-themes": "^0.2.1",
     "nextjs-google-analytics": "^2.3.3",
